blow up buttons, fix spacing

--- a/src/app.css
+++ b/src/app.css
@@ -92,4 +92,9 @@ pre {
 	display: grid;
 	grid-template: repeat(1, 1fr) / repeat(5, 1fr);
 	gap: 10px;
+	padding: 10px;
+}
+
+.big {
+	font-size: 25px;
 }
